# kcbrain

./: .env.sample  .gitignore  .gitmodules  AGENTS.md  DESIGN.md  README.en.md  README.md  SOURCES.md  pyproject.toml  vendor.lock.json
landing/: index.html  kcbrain.html
public/: kcbrain.php  kcbrain_config.php.example
scripts/: deploy.sh  deploy_landing.sh  install_vendor.sh  verify_vendor.sh
src/kcbrain/: __init__.py  api.py  config.py  ollama.py  prompts.py  schemas.py  vendor_adapters.py
systemd/: kcbrain-api.service
tests/: test_api.py  test_ollama.py  test_vendor_adapters.py
